# VLPR

./: CMakeLists.txt
Test_VLPR/: AnnPredict.cpp  AnnPredict.h  CMakeLists.txt  ColorLocate.cpp  ColorLocate.h  PlateLocate.cpp  PlateLocate.h  PlateRecognize.cpp  PlateRecognize.h  SobelLocate.cpp  SobelLocate.h  SvmPredict.cpp  SvmPredict.h  Test_VLPR.cpp
